# picopterx

./: .gitignore  .gitmodules  .travis.yml  README.md
code/: .gitignore  CMakeLists.txt  Doxyfile  README.md  configure
code/configs/: auto.json  camera.json  demo.json  track.json
code/emulation/: libgpsmm.h  wiringPi.h  wiringPiI2C.h  wiringSerial.h
code/emulation/gps-emu/: libgpsmm.h
code/include/: NazaDecoderLib.h  PID.h  buzzer.h  camera_stream.h  common.h  config.h.in  datalog.h  env_mapping.h  flightboard.h  flightcontroller.h  gpio.h  gps_feed.h  gps_gpsd.h  gps_mav.h  gps_naza.h  gridspace.h  imu_feed.h  lawnmower.h  lidar.h  log.h  mavcommslink.h  navigation.h  object_tracker.h  observations.h  opts.h  pathplan.h  picopter.h  threadpool.h  user_tracker.h  utility.h  watchdog.h  waypoints.h
code/src/apps/: CMakeLists.txt  NazaDecoderExample.cpp  camtest.cpp  fbcal.cpp  fbtest.cpp  gridtest.cpp  naza_decoder.cpp  naza_mag_calibration.cpp  pathtest.cpp  speedcal.cpp  trackertest.cpp
code/src/base/: CMakeLists.txt  NazaDecoderLib.cpp  PID.cpp  buzzer.cpp  camera_glyphs.cpp  camera_stream.cpp  common.cpp  datalog.cpp  flightboard-private.h  flightboard.cpp  flightcontroller.cpp  gpio.cpp  gps.cpp  gps_gpsd.cpp  gps_mav.cpp  gps_naza.cpp  imu.cpp  lidar.cpp  log.cpp  mavcommsserial.cpp  mavcommstcp.cpp  opts.cpp  watchdog.cpp
code/src/modules/: CMakeLists.txt  env_mapping.cpp  gridspace.cpp  object_tracker.cpp  observations.cpp  pathplan.cpp  user_tracker.cpp  utility.cpp  waypoints.cpp
code/src/server/: CMakeLists.txt  picopter.cpp  picopter.thrift
code/test/: CMakeLists.txt  messages.txt  test_buzzer.cpp  test_navigation.cpp  test_opts.cpp
code/test/data/: NAZA_DUMP070415  NAZA_DUMP310315  gps_jamesoval.txt  gps_log_2015-09-19-gps-glitch.gpx  gps_mav-20150919T111943.txt  gps_nofix.txt  gps_stationary.txt  naza_dump_070415.gpx  object_tracking_log_with_elevation.gpx  object_tracking_log_with_elevation.txt  opts_data.txt  waypoints_trial1.txt
code/test/data/lawnmower-01-070415/: lawnmower_trial1.gpx
code/test/data/lawnmower-02-070415/: lawnmower_trial2.gpx
code/test/data/waypoints-01-070415/: waypoints_trial1.gpx
configs/: demo.json
experiments/ardupilot/: log.txt
experiments/camera/: .gitignore  MatchTemplate_Demo.cpp  camshiftdemo.cpp  glyph.py  glyphrun.py  glyphtm.py  glyphtmrs.py  sift.py  svm.cpp
experiments/camera/cascade/: hog.cpp  objectDetection.cpp  objectDetection2.cpp
experiments/gps/: distance.py  gpxconv_alt.py  lawnmower.py  spiral.py
experiments/gps/comparison-to-old/: gps_gpsd.cpp  gps_qstarz.cpp
experiments/gps/gpx/: gpxconv_lawnmower.py  gpxconv_naza.py  gpxconv_waypoints.py
experiments/imagespeed/: graphfps.py  graphit.py
experiments/imagespeed/new/: proc1280at1280.txt  proc1280at640.txt  proc320at160.txt  proc320at320.txt  proc640at320.txt  proc640at640.txt
experiments/imagespeed/old/: 1280at1280.txt  1280at640.txt  320at160.txt  320at320.txt  640at320.txt  640at640.txt
experiments/speed2pwm/: s2p.py
scripts/: install-rsyslog.sh  mjpg-streamer.sh  run-server.sh
server/: .gitignore  CMakeLists.txt  Doxyfile  configure
server/emulation/: wiringPi.h
server/include/: common.h  config.h.in  log.h  picopter.h
server/src/: gpio.cpp  log.cpp  picopter.cpp
system/boot/: cmdline.txt  config.txt
system/etc/: fstab  modules  rc.local
system/etc/dhcp/: dhclient.conf  dhcpd.conf
system/etc/init.d/: isc-dhcp-server
system/etc/lighttpd/: lighttpd.conf
system/etc/logrotate.d/: picopter.conf
system/etc/network/: interfaces
system/rsyslog.d/: 30-picopter.conf
www/: .gitignore  README.md  ajax-default-options.php  ajax-functions.php  ajax-review-gpx.php  ajax-review.php  ajax-thrift.php  camera-fullscreen.php  index.php  set-options.php  waypoints_parser.py
www/css/: bootstrap-slider.css  leaflet-numbered-markers.css  style.css
www/js/: ajax.js  autorun.js  camera.js  control.js  joystick.js  jquery.coptermap.js  leaflet-numbered-markers.js  map.js  style.js
